Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1237

When compaction generates no output, blocks are leaked

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Public beta
    • 0.6.0
    • tablet
    • None

    Description

      In the case that a compaction generates no output, or in the case that we explicitly flush an empty MRS (as in KUDU-1236), we end up orphaning tiny blocks for each column. Combined with the bug in KUDU-1236, this can cause a fairly rapid leak of blocks – on one server we ended up with upwards of 50,000,000 blocks which were averaging less than 100 bytes each.

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: