KUDU-1237. don't leak blocks on empty flush/compaction

This changes WritableBlock::~WritableBlock() to abort the block
if it is not explicitly closed. It also changes DiskRowSetWriter
such that, if no rows are written to a RowSet, it returns
Status::Aborted(), which is picked up by RollingDiskRowSetWriter,
causing it to abort all of the in-progress files.

Change-Id: I913d94683718fc5b887a603eff77a16aa3432591
Reviewed-on: http://gerrit.cloudera.org:8080/1355
Reviewed-by: Jean-Daniel Cryans
Tested-by: Internal Jenkins